# vpfemcpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.org
Sandbox/src/: BeamElementExample.hpp  SandboxApp.cpp
VPFEM/: CMakeLists.txt  VPFEM
VPFEM/src/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.h  FiniteElementModel.cpp  FiniteElementModel.hpp  Instrumentation.hpp  Log.cpp  Log.hpp  Recorder.hpp
VPFEM/src/Analyze/: Analyze.cpp  Analyze.hpp  ConjugateGradientIterative.cpp  ConjugateGradientIterative.hpp  ConjugateGradientPreconditioned.cpp  ConjugateGradientPreconditioned.hpp  Result.cpp  Result.hpp  Solver.cpp  Solver.hpp
VPFEM/src/Element/: BeamElement.cpp  BeamElement.hpp  ElasticBeamColumnElement.cpp  ElasticBeamColumnElement.hpp  ElasticBeamElement.cpp  ElasticBeamElement.hpp  Element.cpp  Element.hpp  IntegrationPoints.cpp  IntegrationPoints.hpp  Quad4.cpp  Quad4.hpp
VPFEM/src/Geometry/: Model.cpp  Model.hpp  Node.cpp  Node.hpp
VPFEM/src/Material/: Material.cpp  Material.hpp
